2006-03-28  Karl Runge <runge@karlrunge.com>
	* classes/ssl: patch to tightvnc Java viewer for SSL support
	  plus other fixes (richcursor colors, Tab keysym, etc).
	* libvncserver/httpd.c: add missing \r in 200 OK.

2006-03-27  Steven Carr <scarr@jsa-usa.com>
	* rfbserver.c: Zlib encoding cannot have a limit via
	  maxRectsPerUpdate

2006-02-28  Donald Dugger <donald.d.dugger@intel.com>
	* rfb.h, sockets.c, main.c: add a flag to handle all pending
	  input events instead of one at a time.

2006-02-24  Karl Runge <runge@karlrunge.com>
	* x11vnc: -unixpw and -stunnel options.  Add clipboard input
	  to per-client input controls.

2006-02-24  Rohit Kumar <rokumar@novell.com>
	* main.c, rfbtightserver.c, rfb.h: added method to get 
	  extension specific client data.

2006-02-22  Rohit Kumar <rokumar@novell.com>
	* auth.c, main.c, rfbtightserver.c, rfb.h: add methods to
	  unregister extensions and security types.

2006-02-20  Karl Runge <runge@karlrunge.com>
	* main.c, cursor.c, tightvnc-filetransfer: fix some non-gcc
	  compiler warnings.

2006-01-14  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -8to24 option for some multi-depth displays.

2006-01-12  Karl Runge <runge@karlrunge.com>
	* configure.ac: add switches for most X extensions.

2006-01-10  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/{main.c,rfbserver.c}: fix timely closing of clients;
	  the client iterator in rfbProcessEvents() has to iterate also
	  over clients whose sock < 0. Noticed by Karl.

2006-01-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: the big split. (and -afteraccept and -passwdfile read:..)
	* examples/pnmshow24.c: fix typo.

2006-01-08  Karl Runge <runge@karlrunge.com>
	* libvncclient/vncviewer.c: fix non-jpeg/libz builds.
	* examples/pnmshow24.c: fix non-ALLOW24BPP builds.
	* libvncserver/main.c: fix 'static int' defn.

2006-01-05  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: rfbRegisterProtocolExtension extMutex was
	  never initialized.
